# ifpl

./: LICENSE  README.md  ifpl.cabal
app/: Main.hs
src/: AST.hs  DataDef.hs  IFPL.hs
